--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.content.MessagesFragment">
 
     <TextView
-        android:id="@+id/textview_first"
+        android:id="@+id/textViewKarmaLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -51,5 +51,5 @@
         app:layout_constraintBottom_toTopOf="@+id/buttonWriteTest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_first" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewKarmaLogin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
