--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -11,7 +11,7 @@
         android:layout_width="220dp"
         android:layout_height="90dp"
         android:layout_marginTop="24dp"
-        android:text="Favor Board"
+        android:text="Chat Board"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/profileButton"
@@ -28,14 +28,14 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/buttonWriteTest"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/buttonWriteTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
-        android:text="Write Test"
+        android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -43,16 +43,18 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="305dp"
+        android:layout_height="350dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonWriteTest"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewKarmaLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewKarmaLogin"
+        app:layout_constraintVertical_bias="0.042" />
 
     <Button
         android:id="@+id/profileButton"
@@ -65,4 +67,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/chatTextMultiline"
+        android:layout_width="348dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:hint="Inserte mensaje"
+        android:inputType="textPersonName"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/message_recycler"
+        app:layout_constraintVertical_bias="0.263" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
