Set ProfileData in ProfileFrag

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -107,6 +107,7 @@
         android:id="@+id/usernameTextView"
         android:layout_width="167dp"
         android:layout_height="41dp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
